--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <span class="up">HI!</span>
                 <span class="down">I am Bhavesh Chalke</span>
             </h1>
-            <p class="header-subtitle">FRONTEND WEB DESIGNER</p>            
+            <p class="header-subtitle">Level Designer / Technical Artist</p>            
 
             <button class="btn btn-primary">Visit My Works</button>
         </div>              
