--- a/index.html
+++ b/index.html
@@ -72,10 +72,11 @@
                     <p class="section-subtitle">Who Am I ?</p>
                     <h2 class="section-title mb-3">About Me</h2>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae aliquid ad provident aut fuga animi soluta quae eos non cupiditate voluptates dolorem, doloremque quos dicta quibusdam impedit iure nemo a iste 
-                        <br>culpa! Quasi quibusdam hic recusandae delectus velit officiis explicabo voluptatibus! Nemo esse similique, voluptates labore distinctio, placeat explicabo facilis molestias, blanditiis culpa iusto voluptatem ratione eligendi a, quia temporibus velit vero ipsa sint ex voluptatum expedita aliquid! Debitis, nam!              
+                        I have more than five years of Industry experience, and my design process is iterative, responsive, and participatory. 
+                        <br>I watched a good amount of cartoons as a child and was always in amazement of wonderfully illustrated movies, and video games, which ultimately paved the way for me to become a Level Designer. A fan of Video Games              
                     </p>
-                    <button class="btn-rounded btn btn-outline-primary mt-4">Download CV</button>
+                    
+                    <a href="assets/pdf/BResumeOG.pdf"  download="Bhavesh-Chalke-Resume" ></a><button class="btn-rounded btn btn-outline-primary mt-4">Download CV</button></a>
                 </div>              
             </div><!-- end of about wrapper -->
         </div><!-- end of container -->
