--- a/index.html
+++ b/index.html
@@ -169,6 +169,14 @@
     </div>
 </div>
 
+<!-- Third Section -->
+<div class="section" id="section2">
+    <div class="hero">
+        <h4 style="color: #ffffff;">A Game?</h4>
+        <iframe src="./test_html_build_1/" style="width: 180vh; height: 85vh; border: 5px solid rgb(59, 49, 71); border-radius: 15px;"> </iframe>
+    </div>
+</div>
+
 
 <!-- Second Image Sequence -->
 <div class="hero-sequence">
