--- a/test_html_build_1/index.html
+++ b/test_html_build_1/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/test_html_build_1.loader.js";
+      var loaderUrl = buildUrl + "/test_html_build_2.loader.js";
       var config = {
-        dataUrl: buildUrl + "/test_html_build_1.data.gz",
-        frameworkUrl: buildUrl + "/test_html_build_1.framework.js.gz",
-        codeUrl: buildUrl + "/test_html_build_1.wasm.gz",
+        dataUrl: buildUrl + "/test_html_build_2.data",
+        frameworkUrl: buildUrl + "/test_html_build_2.framework.js",
+        codeUrl: buildUrl + "/test_html_build_2.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Just Jump It",
