--- a/test_html_build_1/index.html
+++ b/test_html_build_1/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Just Jump It</title>
+    <title>Just Jump It</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
   <body>
     <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=960 height=600></canvas>
+      <canvas id="unity-canvas" width=1536 height=720></canvas>
       <div id="unity-loading-bar">
         <div id="unity-logo"></div>
         <div id="unity-progress-bar-empty">
@@ -56,15 +56,15 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/test_html_build_2.loader.js";
+      var loaderUrl = buildUrl + "/test_html_build_3.loader.js";
       var config = {
-        dataUrl: buildUrl + "/test_html_build_2.data",
-        frameworkUrl: buildUrl + "/test_html_build_2.framework.js",
-        codeUrl: buildUrl + "/test_html_build_2.wasm",
+        dataUrl: buildUrl + "/test_html_build_3.data",
+        frameworkUrl: buildUrl + "/test_html_build_3.framework.js",
+        codeUrl: buildUrl + "/test_html_build_3.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
+        companyName: "volkan",
         productName: "Just Jump It",
-        productVersion: "0.1",
+        productVersion: "0.2",
         showBanner: unityShowBanner,
       };
 
@@ -93,8 +93,8 @@
       } else {
         // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
 
-        canvas.style.width = "960px";
-        canvas.style.height = "600px";
+        canvas.style.width = "1536px";
+        canvas.style.height = "720px";
       }
 
       loadingBar.style.display = "block";
