added bmw_gtr _part

--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
     </div>
 </div>
 
+<div class="section">
+    <div class="hero">
+        <h4>A parkour game, Wanna give a try?</h4>
+        <iframe src="./webexport_bmw_m3_gtr/" style="width: 95vw; height: 85vh; border: 1px solid rgb(27, 27, 27); border-radius: 15px; background-color: #272727;"></iframe>
+    </div>
+</div>
+
 <div class="hero-sequence">
     <div class="sticky-element">
         <div class="sequence-element"><canvas id="canvas2"></canvas></div>
