--- a/index.html
+++ b/index.html
@@ -1,130 +1,410 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>CHALKE_PORTFOLIO</title>
+<html lang="en">
 
-<style>
-    @font-face { font-family: 'CrashDemons'; src: url('./font/CrashDemons.otf'); }
-    body { margin: 0; font-family: 'CrashDemons'; color: #fff; background: #000; font-size: 25px; scroll-snap-type: y mandatory; height: 100vh; overflow-y: scroll; }
-    h1 { font-size: 40px; margin-bottom: 10px; }
-    p { font-size: 22px; }
-    .hero { padding: 40px; text-align: center; }
-    .hero-sequence { height: 450vh; scroll-snap-type: y mandatory; }
-    .sticky-element { position: sticky; top: 0; height: 100vh; display: grid; place-items: center; }
-    .sequence-element canvas { display: block; width: 100%; height: 100%; }
-    footer { background: linear-gradient(rgb(0, 0, 0), rgb(59, 49, 71)); color: #fff; height: 250px; display: grid; place-items: center; font-size: 20px; }
-    .section { width: 100vw; height: 100vh; display: flex; align-items: center; justify-content: center; color: #ffffff; scroll-snap-align: start; }
-    #scrollText { position: absolute; bottom: 20px; font-size: 22px; color: #fff; background: rgba(0, 0, 0, 0.5); padding: 10px 20px; border-radius: 10px; animation: scaleText 3s infinite; }
-    @keyframes scaleText { 0%, 100% { transform: scale(1); } 50% { transform: scale(1.2); } }
-    #loading-screen { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: black; display: flex; align-items: center; justify-content: center; z-index: 1000; opacity: 1; transition: opacity 1.5s; }
-    #loading-screen.hidden { opacity: 0; pointer-events: none; }
-    #invert-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; mix-blend-mode: difference; background: white; z-index: 9999; transition: clip-path 0.05s; clip-path: circle(0px at 0px 0px); }
-    .scrollToTopBtn { position: fixed; bottom: 20px; right: 20px; background: #fff; color: #000; font-size: 18px; padding: 15px; cursor: pointer; opacity: 0.5; transition: opacity 0.3s ease; }
-    .scrollToTopBtn:hover { opacity: 1; }
-    .scrollToTopBtn.hidden { opacity: 0; pointer-events: none; }
-</style>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Main Page with Menu + Tab Nav</title>
+  <style>
+    :root {
+      --fs: clamp(28px, 6vw, 56px);
+      font-family: system-ui, -apple-system, "Segoe UI", Roboto, Arial;
+    }
 
-<div id="invert-overlay"></div>
+    html,
+    body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
 
-<div class="section">
-    <div class="hero"><h1>Torque : Lore</h1></div>
-    <p id="scrollText">Scroll Down</p>
-</div>
+    body {
+      overflow-y: hidden;
+      scroll-behavior: auto;
+      scroll-snap-type: y mandatory;
+    }
 
-<div class="hero-sequence">
-    <div class="sticky-element">
-        <div class="sequence-element"><canvas id="canvas1"></canvas></div>
+    section {
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      scroll-snap-align: start;
+      -webkit-tap-highlight-color: transparent;
+      user-select: none;
+      padding-right: 30px;
+      box-sizing: border-box;
+    }
+
+    section iframe {
+      flex: 1;
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+
+    .split-half {
+      flex: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: var(--fs);
+    }
+
+    .one .top {
+      flex: 7;
+    }
+
+    .one .bottom {
+      background: #222;
+      color: #fff;
+      flex: 3;
+    }
+
+    .two {
+      background: #262626;
+      color: #fff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: var(--fs);
+    }
+
+    .three {
+      background: #383838;
+      color: #fff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: var(--fs);
+    }
+
+    .four {
+      background: #5d5d5d;
+      color: #fff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: var(--fs);
+    }
+
+    .dot-nav {
+      position: fixed;
+      top: 0;
+      right: 0;
+      height: 100%;
+      width: 30px;
+      background: #393939;
+      display: flex;
+      flex-direction: column;
+      align-items: left;
+      z-index: 9999;
+    }
+
+    .dot-nav button {
+      width: 100%;
+      height: auto;
+      flex: 1;
+      border: none;
+      background: rgba(255, 255, 255, 0.3);
+      cursor: pointer;
+      transition: background 0.3s ease;
+      box-shadow: 0 10px 5px rgba(0, 0, 0, 1);
+      box-sizing: border-box;
+      /* border: 2px solid #ffffff71; */
+    }
+
+    .dot-nav button span {
+      writing-mode: vertical-lr;
+      /* text-orientation: mixed; */
+      transform: rotate(360deg);
+      white-space: nowrap;
+      font-size: 12px;
+      color: #fff;
+    }
+
+    .dot-nav button.active {
+      background: #1c1c1c;
+      color: #000;
+    }
+
+    .menu-bar {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 35px;
+      background: rgba(43, 43, 43, 0.0025);
+      margin: 5px;
+      color: #fff;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 10px 15px;
+      font-size: 16px;
+      font-weight: 600;
+      z-index: 10000;
+      backdrop-filter: blur(8px);
+      box-shadow: 0 6px 0px rgba(0, 0, 0, 0.278);
+      box-sizing: border-box;
+    }
+
+
+    .menu-left {
+      font-size: 20px;
+      letter-spacing: 1px;
+    }
+
+    .menu-right {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+    }
+
+    .menu-right button {
+      background: transparent;
+      border: 1px solid #fff;
+      color: #fff;
+      padding: 6px 14px;
+      font-size: 14px;
+      cursor: pointer;
+      transition: all 0.25s ease;
+      box-shadow: 0 6px 0px rgba(0, 0, 0, 0.278);
+    }
+
+    .menu-right button:hover {
+      background: #fff;
+      color: #000;
+    }
+
+    .hamburger {
+      display: none;
+      flex-direction: column;
+      justify-content: center;
+      width: 26px;
+      height: 22px;
+      cursor: pointer;
+      gap: 5px;
+    }
+
+    .hamburger span {
+      display: block;
+      height: 3px;
+      width: 100%;
+      background: #fff;
+      border-radius: 2px;
+    }
+
+    .dropdown {
+      display: none;
+      flex-direction: column;
+      position: absolute;
+      right: 12px;
+      top: 56px;
+      background: rgba(43, 43, 43, 0.25);
+      padding: 10px 14px;
+      border-radius: 8px;
+      backdrop-filter: blur(8px);
+      box-shadow: 0 6px 0px rgba(0, 0, 0, 0.278);
+      border: 1px solid #ffffff40;
+      z-index: 10001;
+    }
+
+    .dropdown button {
+      background: transparent;
+      border: 1px solid #fff;
+      color: #fff;
+      padding: 8px 14px;
+      margin: 6px 0;
+      width: 140px;
+      font-size: 14px;
+      text-align: left;
+      cursor: pointer;
+      transition: all 0.25s ease;
+      box-shadow: 0 6px 0px rgba(0, 0, 0, 0.278);
+    }
+
+    .dropdown button:hover {
+      background: #fff;
+      color: #000;
+    }
+
+    @media (max-width: 768px) {
+      .menu-right {
+        display: none;
+      }
+
+      .hamburger {
+        display: flex;
+      }
+    }
+  </style>
+</head>
+
+<body>
+  <!-- Menu Bar -->
+  <div class="menu-bar">
+    <div class="menu-left">torquelore</div>
+
+    <div class="menu-right">
+      <button>work</button>
+      <button>some more work</button>
+      <button onclick="window.open('https://www.linkedin.com','_blank')">linkedin</button>
     </div>
-</div>
 
-<div class="section">
-    <div class="hero">
-        <h4>3d file yeaaaaah!</h4>
-        <iframe src="./GPT3dfile2.html" style="width: 95vw; height: 85vh; border: 0px solid rgb(59, 49, 71); border-radius: 15px;"></iframe>
+    <div class="hamburger" id="hamburger">
+      <span></span><span></span><span></span>
     </div>
-</div>
 
-<div class="section">
-    <div class="hero">
-        <h4>A parkour game, Wanna give a try?</h4>
-        <iframe src="./test_html_build_1/" style="width: 95vw; height: 85vh; border: 1px solid rgb(27, 27, 27); border-radius: 15px; background-color: #272727;"></iframe>
+    <div class="dropdown" id="dropdown">
+      <button>work</button>
+      <button>some more work</button>
+      <button onclick="window.open('https://www.linkedin.com','_blank')">linkedin</button>
     </div>
-</div>
+  </div>
 
-<div class="section">
-    <div class="hero">
-        <h4>A parkour game, Wanna give a try?</h4>
-        <iframe src="./webexport_bmw_m3_gtr/" style="width: 95vw; height: 85vh; border: 1px solid rgb(27, 27, 27); border-radius: 15px; background-color: #272727;"></iframe>
+  <!-- Sections -->
+  <section class="one">
+    <div class="split-half top">
+      <iframe src="unblur_page.html" scrolling="yes"></iframe>
     </div>
-</div>
-
-<div class="hero-sequence">
-    <div class="sticky-element">
-        <div class="sequence-element"><canvas id="canvas2"></canvas></div>
+    <div class="split-half bottom">
+      <iframe src="first_second_half.html" scrolling="yes"></iframe>
     </div>
-</div>
+  </section>
+  <section class="two">Section 2</section>
+  <section class="three">Section 3</section>
+  <section class="four">Section 4</section>
 
-<button id="scrollToTopBtn" class="scrollToTopBtn">Scroll to Top</button>
+  <!-- Side Panel Dot Navigation -->
+  <div class="dot-nav" aria-hidden="true">
+  </div>
 
-<footer>"" Never change to be accepted by others. ""<p>Stay weird</p></footer>
+  <script>
+    // ===== MENU TOGGLE =====
+    const hamburger = document.getElementById('hamburger');
+    const dropdown = document.getElementById('dropdown');
 
-<script>
-    const sequenceNames = ["GT400", "zz0"];
-    const canvases = [document.getElementById('canvas1'), document.getElementById('canvas2')];
-    const contexts = canvases.map(canvas => canvas.getContext('2d'));
-    const frameCounts = [120, 60];
-    const images = [[], []];
-    const setCanvasSize = canvas => { canvas.width = window.innerWidth; canvas.height = window.innerHeight; };
-    canvases.forEach(setCanvasSize);
-    const prepareImages = seqIndex => {
-        for (let i = 1; i <= frameCounts[seqIndex]; i++) {
-            const img = new Image();
-            img.src = `./all_images/${seqIndex === 0 ? 'gt40_blender_images' : 'bigsequence2_filter'}/${sequenceNames[seqIndex]}${i.toString().padStart(3, '0')}.webp`;
-            images[seqIndex].push(img);
-            if (i === 1) img.onload = () => drawImage(seqIndex, 0);
+    hamburger.addEventListener('click', () => {
+      dropdown.style.display = dropdown.style.display === "flex" ? "none" : "flex";
+    });
+
+    // ===== SNAP SCROLL SCRIPT =====
+    (() => {
+      const sections = [...document.querySelectorAll('section')], dotNav = document.querySelector('.dot-nav');
+      let currentIndex = 0, isAnimating = false;
+      const WHEEL_THRESHOLD = 40;
+
+      // dot nav setup
+      const tabLabels = ["HOME", "SECTION 2", "SECTION 3", "SECTION 4"];
+      sections.forEach((_, i) => {
+        const b = document.createElement('button');
+        const span = document.createElement('span');
+        span.textContent = tabLabels[i];        // add text
+        b.appendChild(span);
+        if (i === 0) b.classList.add('active');
+        b.addEventListener('click', () => !isAnimating && goTo(i));
+        dotNav.appendChild(b);
+      });
+
+      const dots = [...dotNav.children];
+
+      const easeOutBack = t => 1 + 2.70158 * Math.pow(t - 1, 3) + 1.70158 * Math.pow(t - 1, 2);
+      const nearestIndex = () => sections.map(s => Math.abs(s.offsetTop - scrollY)).indexOf(Math.min(...sections.map(s => Math.abs(s.offsetTop - scrollY))));
+      const updateDots = i => dots.forEach((d, idx) => d.classList.toggle('active', idx === i));
+
+      const animateTo = (index, duration = 700) => {
+        isAnimating = true;
+        const start = scrollY, target = sections[index].offsetTop, distance = target - start;
+        let startTime = null;
+
+        const frame = time => {
+          if (!startTime) startTime = time;
+          const elapsed = time - startTime;
+          const t = Math.min(elapsed / duration, 1);
+          window.scrollTo(0, Math.round(start + distance * easeOutBack(t)));
+          if (elapsed < duration) requestAnimationFrame(frame);
+          else {
+            window.scrollTo(0, target);
+            isAnimating = false;
+            currentIndex = index;
+            updateDots(currentIndex);
+          }
+        };
+        requestAnimationFrame(frame);
+      };
+
+      const goTo = index => {
+        index = Math.max(0, Math.min(index, sections.length - 1));
+        if (index === currentIndex && Math.abs(scrollY - sections[index].offsetTop) < 2) return;
+        animateTo(index);
+      };
+
+      // wheel
+      window.addEventListener('wheel', e => {
+        e.preventDefault();
+        if (isAnimating) return;
+        let delta = (e.deltaMode === 1 ? e.deltaY * 16 : e.deltaMode === 2 ? e.deltaY * innerHeight : e.deltaY);
+        if (Math.abs(delta) > WHEEL_THRESHOLD) {
+          if (delta > 0) goTo(currentIndex + 1);
+          else goTo(currentIndex - 1);
+        } else {
+          const n = nearestIndex();
+          if (n !== currentIndex) goTo(n);
         }
-    };
-    const drawImageToFit = (ctx, img, canvas) => {
-        ctx.clearRect(0, 0, canvas.width, canvas.height);
-        const aspectRatio = img.width / img.height;
-        const [newWidth, newHeight] = canvas.width / aspectRatio > canvas.height ? [canvas.height * aspectRatio, canvas.height] : [canvas.width, canvas.width / aspectRatio];
-        const offsetX = (canvas.width - newWidth) / 2;
-        const offsetY = (canvas.height - newHeight) / 2;
-        ctx.drawImage(img, offsetX, offsetY, newWidth, newHeight);
-    };
-    const drawImage = (seqIndex, frameIndex) => drawImageToFit(contexts[seqIndex], images[seqIndex][frameIndex], canvases[seqIndex]);
-    sequenceNames.forEach((_, i) => prepareImages(i));
-    window.addEventListener('scroll', () => {
-        const scrollTop = document.documentElement.scrollTop;
-        document.querySelectorAll('.hero-sequence').forEach((seq, i) => {
-            const offsetTop = seq.offsetTop;
-            const maxScroll = seq.scrollHeight - window.innerHeight;
-            const frameIndex = Math.max(0, Math.min(frameCounts[i] - 1, Math.ceil(((scrollTop - offsetTop) / maxScroll) * frameCounts[i])));
-            requestAnimationFrame(() => drawImage(i, frameIndex));
-        });
-    });
-    window.addEventListener('resize', () => canvases.forEach(setCanvasSize));
-    document.addEventListener('DOMContentLoaded', () => {
-        const loadingScreen = document.createElement('div');
-        loadingScreen.id = 'loading-screen';
-        const progressText = document.createElement('div');
-        progressText.id = 'loading-progress';
-        loadingScreen.appendChild(progressText);
-        document.body.appendChild(loadingScreen);
-        let progress = 0;
-        const interval = setInterval(() => { if (progress > 100) { clearInterval(interval); loadingScreen.classList.add('hidden'); } else { progressText.textContent = `${progress++}`; } }, 10);
-    });
-    document.addEventListener('mousemove', e => {
-        const invertOverlay = document.getElementById('invert-overlay');
-        const scrollY = window.scrollY;
-        const sections = document.querySelectorAll('.section');
-        const inSection2Or3 = scrollY >= sections[1].offsetTop && scrollY < (sections[2].offsetTop + sections[2].offsetHeight);
-        invertOverlay.style.clipPath = inSection2Or3 ? 'circle(0px at 0px 0px)' : `circle(50px at ${e.clientX}px ${e.clientY}px)`;
-        document.body.style.cursor = inSection2Or3 ? 'default' : 'none';
-    });
-    const scrollToTopBtn = document.getElementById('scrollToTopBtn');
-    window.addEventListener('scroll', () => {
-        scrollToTopBtn.classList.toggle('hidden', document.documentElement.scrollTop < 100);
-    });
-    scrollToTopBtn.addEventListener('click', () => { window.scrollTo({ top: 0, behavior: 'smooth' }); });
-</script>
+      }, { passive: false });
+
+      // keyboard
+      window.addEventListener('keydown', ev => {
+        if (isAnimating) return;
+        if (['ArrowDown', 'PageDown'].includes(ev.key)) { ev.preventDefault(); goTo(currentIndex + 1); }
+        else if (['ArrowUp', 'PageUp'].includes(ev.key)) { ev.preventDefault(); goTo(currentIndex - 1); }
+        else if (ev.key === 'Home') { ev.preventDefault(); goTo(0); }
+        else if (ev.key === 'End') { ev.preventDefault(); goTo(sections.length - 1); }
+      });
+
+      // touch
+      let touchStartY = null;
+      window.addEventListener('touchstart', e => {
+        if (e.touches && e.touches.length === 1)
+          touchStartY = e.touches[0].clientY;
+      }, { passive: true });
+
+      window.addEventListener('touchend', e => {
+        if (touchStartY === null || isAnimating) { touchStartY = null; return; }
+        const diff = touchStartY - ((e.changedTouches && e.changedTouches[0] && e.changedTouches[0].clientY) || 0);
+        const SWIPE_MIN = 40;
+        const newIndex = diff > SWIPE_MIN ? currentIndex + 1 : diff < -SWIPE_MIN ? currentIndex - 1 : nearestIndex();
+        if (newIndex !== currentIndex) goTo(newIndex);
+        touchStartY = null;
+      }, { passive: true });
+
+      // scroll + resize sync
+      let scrollDebounce = null;
+      window.addEventListener('scroll', () => {
+        if (isAnimating) return;
+        clearTimeout(scrollDebounce);
+        scrollDebounce = setTimeout(() => {
+          const n = nearestIndex();
+          if (n !== currentIndex) {
+            currentIndex = n;
+            updateDots(currentIndex);
+          }
+        }, 10);
+      }, { passive: true });
+
+      window.addEventListener('resize', () => {
+        setTimeout(() => goTo(nearestIndex()), 120);
+      });
+
+      // initial alignment
+      const alignOnLoad = () => {
+        currentIndex = nearestIndex();
+        setTimeout(() => goTo(currentIndex), 50);
+      };
+
+      document.addEventListener('DOMContentLoaded', alignOnLoad);
+      if (document.readyState === 'complete' || document.readyState === 'interactive') alignOnLoad();
+    })();
+  </script>
+</body>
+
+</html>
