--- a/index.html
+++ b/index.html
@@ -270,8 +270,10 @@
       <iframe src="first_second_half.html" scrolling="yes"></iframe>
     </div>
   </section>
-  <section class="two">Section 2</section>
-  <section class="three">Section 3</section>
+  <section class="two">
+    <iframe src="lots_of_square_cursor.html" ></iframe>
+  </section>
+  <section class="three"><iframe src="floating_box.html" ></iframe></section>
   <section class="four">Section 4</section>
 
   <!-- Side Panel Dot Navigation -->
