--- a/floating_box.html
+++ b/floating_box.html
@@ -3,163 +3,191 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Draggable & Resizable Cat Message with Iframe</title>
+<title>No Gap ASCII Background</title>
 <style>
 html, body {
     margin: 0;
     padding: 0;
     height: 100%;
     width: 100%;
-    background-color: #323232;
-    font-family: Arial, sans-serif;
+    background: #000;
+    font-family: monospace;
     overflow: hidden;
-    touch-action: none; /* prevent touch scrolling when dragging/resizing */
 }
 
+/* ASCII background */
+#ascii-bg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    white-space: pre;
+    font-size: 12px;
+    line-height: 12px;
+    color: #604d00;
+    z-index: 0;
+    user-select: none;
+    pointer-events: none;
+    margin: 0;
+}
+
+/* Hidden span to measure character size */
+#char-measure {
+    position: absolute;
+    visibility: hidden;
+    font-family: monospace;
+    font-size: 12px;
+    line-height: 12px;
+    white-space: pre;
+}
 .window {
     position: absolute;
-    width: 80vw;
+    width: 70vw;
     max-width: 600px;
     height: 60vh;
     max-height: 400px;
-    background-color: #fff;
-    border: 30px solid rgba(255, 214, 152,0.3); /* outer draggable border */
-    box-shadow: 0 5px 0px rgba(0, 0, 0, 0.3);
-    cursor: move;
-    overflow: hidden;
+    background-color: #111;
+    border: 3px solid #f9c74f;
+    box-shadow: 0 0 20px rgba(255, 204, 0, 0.7), 0 0 40px rgba(255, 204, 0, 0.4);
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
-    touch-action: none;
+    z-index: 10;
+    animation: glow 2s infinite alternate;
 }
-
+@keyframes glow {
+    from {
+        border-color: #f9c74f;
+        box-shadow: 0 0 15px rgba(255, 204, 0, 0.6), 0 0 30px rgba(255, 204, 0, 0.3);
+    }
+    to {
+        border-color: #ffd700;
+        box-shadow: 0 0 25px rgba(255, 204, 0, 1), 0 0 50px rgba(255, 204, 0, 0.8);
+    }
+}
+.drag-bar {
+    height: 30px;
+    background: rgba(255, 214, 152, 0.2);
+    cursor: move;
+    flex-shrink: 0;
+}
+.content {
+    flex: 1;
+    position: relative;
+}
 .resize-handle {
     position: absolute;
-    top: 5px;
-    left: 5px;
-    right: 5px;
-    bottom: 5px;
-    border: 8px solid rgba(255, 195, 56, 0.5); /* inner border for resizing */
-    box-sizing: border-box;
-    pointer-events: all;
-    cursor: nwse-resize;
+    width: 15px;
+    height: 15px;
+    right: 0;
+    bottom: 0;
+    cursor: se-resize;
+    background: rgba(255, 195, 56, 0.5);
 }
-
 iframe {
     width: 100%;
     height: 100%;
     border: none;
-    pointer-events: auto; /* allow interaction */
 }
 </style>
 </head>
 <body>
 
+<pre id="ascii-bg"></pre>
+<div id="char-measure">M</div>
+
 <div id="dialog" class="window">
-    <div class="resize-handle"></div>
-    <iframe src="pixel_art_page.html"></iframe>
+    <div class="drag-bar"></div>
+    <div class="content">
+        <iframe src="https://example.com"></iframe>
+        <div class="resize-handle"></div>
+    </div>
 </div>
 
 <script>
 const dialog = document.getElementById('dialog');
+const dragBar = dialog.querySelector('.drag-bar');
 const resizeHandle = dialog.querySelector('.resize-handle');
-
 let isDragging = false, dragOffsetX, dragOffsetY;
 let isResizing = false, startWidth, startHeight, startX, startY;
 
-// CENTER THE WINDOW
+// center window
 function centerWindow() {
     dialog.style.left = (window.innerWidth - dialog.offsetWidth) / 2 + 'px';
     dialog.style.top = (window.innerHeight - dialog.offsetHeight) / 2 + 'px';
 }
+centerWindow();
+window.addEventListener('resize', centerWindow);
 
-// Helper: clamp a value between min and max
-function clamp(value, min, max) {
-    return Math.min(Math.max(value, min), max);
-}
-
-// DRAG FUNCTIONALITY
-function startDrag(e) {
-    if (e.target === resizeHandle) return;
+// drag
+dragBar.addEventListener('mousedown', (e) => {
     isDragging = true;
     const rect = dialog.getBoundingClientRect();
-    dragOffsetX = (e.touches ? e.touches[0].clientX : e.clientX) - rect.left;
-    dragOffsetY = (e.touches ? e.touches[0].clientY : e.clientY) - rect.top;
-    dialog.style.cursor = 'move';
-}
-function dragMove(e) {
+    dragOffsetX = e.clientX - rect.left;
+    dragOffsetY = e.clientY - rect.top;
+});
+document.addEventListener('mousemove', (e) => {
     if (!isDragging) return;
-    e.preventDefault();
-    const clientX = e.touches ? e.touches[0].clientX : e.clientX;
-    const clientY = e.touches ? e.touches[0].clientY : e.clientY;
-    let newLeft = clientX - dragOffsetX;
-    let newTop = clientY - dragOffsetY;
+    let newLeft = e.clientX - dragOffsetX;
+    let newTop = e.clientY - dragOffsetY;
+    newLeft = Math.max(0, Math.min(newLeft, window.innerWidth - dialog.offsetWidth));
+    newTop = Math.max(0, Math.min(newTop, window.innerHeight - dialog.offsetHeight));
+    dialog.style.left = newLeft + 'px';
+    dialog.style.top = newTop + 'px';
+});
+document.addEventListener('mouseup', ()=> isDragging=false);
 
-    // clamp within viewport
-    const maxLeft = window.innerWidth - dialog.offsetWidth;
-    const maxTop = window.innerHeight - dialog.offsetHeight;
-    dialog.style.left = clamp(newLeft, 0, maxLeft) + 'px';
-    dialog.style.top = clamp(newTop, 0, maxTop) + 'px';
-}
-function endDrag() {
-    isDragging = false;
-    dialog.style.cursor = 'default';
-}
-
-// RESIZE FUNCTIONALITY
-function startResize(e) {
+// resize
+resizeHandle.addEventListener('mousedown', (e) => {
     e.stopPropagation();
     isResizing = true;
     startWidth = dialog.offsetWidth;
     startHeight = dialog.offsetHeight;
-    startX = e.touches ? e.touches[0].clientX : e.clientX;
-    startY = e.touches ? e.touches[0].clientY : e.clientY;
-    document.body.style.cursor = 'nwse-resize';
-}
-function resizeMove(e) {
+    startX = e.clientX;
+    startY = e.clientY;
+});
+document.addEventListener('mousemove', (e) => {
     if (!isResizing) return;
-    e.preventDefault();
-    const clientX = e.touches ? e.touches[0].clientX : e.clientX;
-    const clientY = e.touches ? e.touches[0].clientY : e.clientY;
-
-    let newWidth = startWidth + (clientX - startX);
-    let newHeight = startHeight + (clientY - startY);
-
-    // clamp sizes
-    newWidth = clamp(newWidth, 200, window.innerWidth - dialog.offsetLeft);
-    newHeight = clamp(newHeight, 150, window.innerHeight - dialog.offsetTop);
-
+    let newWidth = startWidth + (e.clientX - startX);
+    let newHeight = startHeight + (e.clientY - startY);
+    newWidth = Math.max(200, Math.min(newWidth, window.innerWidth - dialog.offsetLeft));
+    newHeight = Math.max(150, Math.min(newHeight, window.innerHeight - dialog.offsetTop));
     dialog.style.width = newWidth + 'px';
     dialog.style.height = newHeight + 'px';
+});
+document.addEventListener('mouseup', ()=> isResizing=false);
+
+// ascii bg
+const asciiBg = document.getElementById("ascii-bg");
+const chars = " .:-=+*#%@ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789";
+
+function getCharSize() {
+    const measure = document.getElementById("char-measure");
+    return {
+        w: measure.offsetWidth,
+        h: measure.offsetHeight
+    };
 }
-function endResize() {
-    isResizing = false;
-    document.body.style.cursor = 'default';
+
+function makeFrame() {
+    const {w: charW, h: charH} = getCharSize();
+    const cols = Math.ceil(window.innerWidth / charW) + 1; // add +1 to prevent gap
+    const rows = Math.ceil(window.innerHeight / charH) + 1; // add +1 row too
+
+    let output = "";
+    for (let y = 0; y < rows; y++) {
+        for (let x = 0; x < cols; x++) {
+            output += chars[Math.floor(Math.random() * chars.length)];
+        }
+        output += "\n";
+    }
+    asciiBg.textContent = output;
 }
 
-// Event listeners
-dialog.addEventListener('mousedown', startDrag);
-dialog.addEventListener('touchstart', startDrag);
-
-document.addEventListener('mousemove', dragMove);
-document.addEventListener('touchmove', dragMove, {passive:false});
-
-document.addEventListener('mouseup', endDrag);
-document.addEventListener('touchend', endDrag);
-
-resizeHandle.addEventListener('mousedown', startResize);
-resizeHandle.addEventListener('touchstart', startResize);
-
-document.addEventListener('mousemove', resizeMove);
-document.addEventListener('touchmove', resizeMove, {passive:false});
-
-document.addEventListener('mouseup', endResize);
-document.addEventListener('touchend', endResize);
-
-// CENTER WINDOW ON LOAD & RESIZE
-window.addEventListener('load', centerWindow);
-window.addEventListener('resize', centerWindow);
+setInterval(makeFrame, 80);
+window.addEventListener("resize", makeFrame);
+makeFrame();
 </script>
-
 </body>
 </html>
