--- a/index.html
+++ b/index.html
@@ -271,9 +271,9 @@
     </div>
   </section>
   <section class="two">
-    <iframe src="lots_of_square_cursor.html" ></iframe>
+    <iframe src="pixel_art_page.html" ></iframe>
   </section>
-  <section class="three"><iframe src="floating_box.html" ></iframe></section>
+  <section class="three"><iframe src="windows98.html" ></iframe></section>
   <section class="four">Section 4</section>
 
   <!-- Side Panel Dot Navigation -->
