--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
     <iframe src="pixel_art_page.html" ></iframe>
   </section>
   <section class="three"><iframe src="windows98.html" ></iframe></section>
-  <section class="four">Section 4</section>
+  <section class="four"><iframe src="lots_of_square_cursor.html" ></iframe></section>
 
   <!-- Side Panel Dot Navigation -->
   <div class="dot-nav" aria-hidden="true">
